src/snapshots/rremix__HIR__tests__ex__test1.rem.snap
---
source: src/HIR.rs
assertion_line: 1182
expression: ast
---
Program {
    functions: {},
    main: [
        Expression(
            Unary(
                FunctionCall {
                    function: FunctionCall {
                        name: [
                            Name {
                                name: Span {
                                    str: "show",
                                    start: 0,
                                    end: 4,
                                },
                            },
                            Expression(
                                Unary(
                                    Literal(
                                        String(
                                            "Hello world!",
                                        ),
                                    ),
                                ),
                            ),
                        ],
                        id: RefCell {
                            value: None,
                        },
                    },
                },
            ),
        ),
        Expression(
            Unary(
                FunctionCall {
                    function: FunctionCall {
                        name: [
                            Name {
                                name: Span {
                                    str: "new",
                                    start: 21,
                                    end: 24,
                                },
                            },
                            Name {
                                name: Span {
                                    str: "line",
                                    start: 25,
                                    end: 29,
                                },
                            },
                        ],
                        id: RefCell {
                            value: None,
                        },
                    },
                },
            ),
        ),
    ],
    global_scope: {},
}
